--- a/arbol1.html
+++ b/arbol1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Familia Asprón - 1era Generación</title>
+    <title>Árbol Genealógico Familia Asprón</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,40 +11,17 @@
             color: #333;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+            text-align: center;
         }
 
         h1 {
             font-size: 48px;
             color: #2c3e50;
             margin-top: 20px;
-            text-align: center;
-        }
-
-        .container {
-            display: flex;
-            width: 100%;
-            max-width: 1200px;
-            margin-top: 20px;
-        }
-
-        .left-side {
-            width: 20%;
-            padding: 10px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-        }
-
-        .right-side {
-            width: 80%;
-            padding: 10px;
-            text-align: center;
         }
 
         .menu {
+            margin-top: 20px;
             margin-bottom: 20px;
         }
 
@@ -52,44 +29,18 @@
             text-decoration: none;
             color: #2c3e50;
             font-size: 18px;
-            margin: 10px 0;
-            padding: 10px 20px;
-            border: 2px solid #2c3e50;
-            border-radius: 5px;
-            display: block;
-            text-align: left;
-            transition: background-color 0.3s, color 0.3s;
+            margin: 0 15px;
         }
 
         .menu a:hover {
-            background-color: #2c3e50;
-            color: #ffffff;
-        }
-
-        .second-menu {
-            margin-top: 20px;
-        }
-
-        .second-menu a {
-            text-decoration: none;
-            color: #ffffff;
-            font-size: 16px;
-            margin: 10px 0;
-            padding: 8px 16px;
-            background-color: #e74c3c;
-            border-radius: 5px;
-            display: block;
-            text-align: left;
-            transition: background-color 0.3s;
-        }
-
-        .second-menu a:hover {
-            background-color: #c0392b;
+            color: #e74c3c;
         }
 
         .arbol-img {
-            max-width: 100%;
-            height: auto;
+            width: 80%; /* Ajusta el ancho de la imagen */
+            max-width: 800px; /* Máximo ancho para no estirar demasiado */
+            height: auto; /* Mantiene la proporción de la imagen */
+            margin-top: 20px;
             border: 5px solid #2c3e50;
             border-radius: 10px;
         }
@@ -98,45 +49,21 @@
             font-size: 14px;
             color: #7f8c8d;
             margin-top: 50px;
-            text-align: center;
         }
     </style>
 </head>
 <body>
 
+    <!-- Menú de navegación -->
+    <div class="menu">
+        <a href="pagina-principal.html">HOME</a>
+    </div>
+
     <!-- Título principal -->
     <h1>FAMILIA ASPRÓN 1ERA GENERACIÓN</h1>
 
-    <!-- Contenedor principal -->
-    <div class="container">
-        <!-- Lateral izquierdo (menús) -->
-        <div class="left-side">
-
-		<!-- Botón HOME -->
-		<div class="menu">
-   		 <a href="pagina-principal.html">HOME</a>
-	    <!-- Menú con botones para enlazar a las páginas de los miembros -->
-            <div class="menu">
-                <a href="pedro.html">PEDRO</a>
-                <a href="antonio.html">ANTONIO</a>
-                <a href="chole.html">MA SOLEDAD</a>
-                <a href="polo.html">LEOPOLDO</a>
-                <a href="david.html">DAVID APOLINAR</a>
-            </div>
-
-            <!-- Segundo menú con otro formato -->
-            <div class="second-menu">
-                <a href="foto-familiar.html">FOTO FAMILIAR</a>
-                <a href="acta-matrimonio.html">ACTA MATRIMONIO</a>
-            </div>
-        </div>
-
-        <!-- Lateral derecho (imagen) -->
-        <div class="right-side">
-            <!-- Imagen del árbol genealógico en tamaño real -->
-            <img class="arbol-img" src="https://i.imgur.com/qjdkp51.png" alt="Árbol Genealógico Familia Asprón 1era Generación">
-        </div>
-    </div>
+    <!-- Imagen del árbol genealógico -->
+    <img class="arbol-img" src="https://i.imgur.com/qjdkp51.png" alt="Árbol Genealógico Familia Asprón">
 
     <!-- Crédito -->
     <footer>
