--- a/arbol1.html
+++ b/arbol1.html
@@ -26,94 +26,6 @@
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
-            gap: 10px; /* Espacio entre los botones */
-        }
-
-        .menu a {
-            text-decoration: none;
-            color: #2c3e50;
-            font-size: 16px; /* Tamaño de fuente reducido */
-            padding: 8px 16px; /* Espaciado interno reducido */
-            border: 2px solid #2c3e50;
-            border-radius: 5px;
-            transition: background-color 0.3s, color 0.3s;
-        }
-
-        .menu a:hover {
-            background-color: #2c3e50;
-            color: #ffffff;
-        }
-
-        .arbol-img {
-            width: 80%; /* Ajusta el ancho de la imagen */
-            max-width: 800px; /* Máximo ancho para no estirar demasiado */
-            height: auto; /* Mantiene la proporción de la imagen */
-            margin-top: 20px;
-            border: 5px solid #2c3e50;
-            border-radius: 10px;
-        }
-
-        footer {
-            font-size: 14px;
-            color: #7f8c8d;
-            margin-top: 50px;
-        }
-    </style>
-</head>
-<body>
-
-    <!-- Menú de navegación reducido -->
-    <div class="menu">
-        <a href="pagina-principal.html">HOME</a>
-        <a href="pedro.html">PEDRO</a>
-        <a href="antonio.html">ANTONIO</a>
-        <a href="chole.html">MA SOLEDAD</a>
-        <a href="polo.html">LEOPOLDO</a>
-        <a href="david.html">DAVID APOLINAR</a>
-    </div>
-
-    <!-- Título principal -->
-    <h1>FAMILIA ASPRÓN 1ERA GENERACIÓN</h1>
-
-    <!-- Imagen del árbol genealógico -->
-    <img class="arbol-img" src="" alt="Árbol Genealógico Familia Asprón">
-
-    <!-- Crédito -->
-    <footer>
-        Creado por Antonio Asprón Vera
-    </footer>
-
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Árbol Genealógico Familia Asprón</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 48px;
-            color: #2c3e50;
-            margin-top: 20px;
-        }
-
-        .menu {
-            margin-top: 20px;
-            margin-bottom: 20px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
             gap: 10px;
         }
 
@@ -178,9 +90,9 @@
 
     <!-- Enlaces sobre los nombres -->
     <p>
-        <a class="nombre-link" href="https://i.imgur.com/Ql22QdA.png" target="_blank">EMILIA PEREZ CAMPOS</a>
+        <a class="nombre-link" href="https://i.imgur.com/Ql22QdA.png" target="_blank">VER FOTO EMILIA</a>
         y
-        <a class="nombre-link" href="https://i.imgur.com/GrWNNQn.jpeg" target="_blank">ANTONIO ASPRON PILAR</a>
+        <a class="nombre-link" href="https://i.imgur.com/GrWNNQn.jpeg" target="_blank">VER FOTO ANTONIO</a>
     </p>
 
     <!-- Crédito -->
